--- a/index.css
+++ b/index.css
@@ -74,8 +74,10 @@ body {
   width: 100%;
 }
 
-.container .img-container .img-center h1 {
+.container .img-container .img-center p {
+  display: block;
   position: absolute;
+  font-size: 40px;
   top: 100px;
   left: 50%;
   border: 5px solid #fff;
@@ -83,8 +85,9 @@ body {
   color: #fff;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
-  transform: translate(-50%);
   -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  -webkit-transforsm: translate(-50%);
   -moz-transform: translate(-50%);
   -ms-transform: translate(-50%);
   -o-transform: translate(-50%);
@@ -118,7 +121,13 @@ body {
   position: relative;
 }
 
-.container .img-container .img-center .information > div h3:first-child {
+.container .img-container .img-center .information > div span {
+  display: block;
+  padding: 20px;
+  font-weight: bold;
+}
+
+.container .img-container .img-center .information > div span:first-child {
   color: #ccc;
 }
 
