--- a/index.scss
+++ b/index.scss
@@ -66,8 +66,10 @@ body {
                 @include img();
             }
             // style for the london text
-            h1 {
+            p {
+                display: block;
                 position: absolute;
+                font-size: 40px;
                 top: 100px;
                 left: 50%;
                 border: 5px solid #fff;
@@ -75,7 +77,7 @@ body {
                 color: #fff;
                 backdrop-filter: blur(5px);
                 transform: translate(-50%);
-                -webkit-transform: translate(-50%);
+                -webkit-transforsm: translate(-50%);
                 -moz-transform: translate(-50%);
                 -ms-transform: translate(-50%);
                 -o-transform: translate(-50%);
@@ -99,7 +101,12 @@ body {
                     width: 100%;
                     position: relative;
                     // for the title in the information
-                    h3:first-child {
+                    span {
+                        display: block;
+                        padding: 20px;
+                        font-weight: bold;
+                    }
+                    span:first-child {
                         color: #ccc;
                     }
                 }
